--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,11 +99,13 @@
       </div>
       <div id="righttop-header">
         <div id="top-social">
-          <%if current_user.present? && current_user.role !="admin" %>
-            <ul>
-              <li><a href="/users/sign_in">Login</a></li>
-            </ul>
+           <ul>
+              <li>
+          <%unless current_user.present? %>
+           <a href="/users/sign_in">Login</a>
           <%end%>
+              </li>
+            </ul>
         </div>
         <div id="top-slogan">
           <h4 align="center"><span class="title-red">HIPAA
@@ -119,30 +121,15 @@
         <div id="mainmenu">
           <%if current_user.present? && current_user.role =="client" %>
             <ul id="menu">
-              <li class="current">
-                <a href="/">home</a>
-              </li>
               <li>
-                <a href="/dashboard">dashboard</a>
+                <a href="/dashboard">Dashboard</a>
               </li>
-              <li >
-                <a href="/issues.html">issues</a>
+               <li>
+                <a href="/users/edit">Change Password</a>
               </li>
-              <li >
-                <a href="/solutions.html">solutions</a>
-              </li>
-
-              <li >
-                <a href="/contact.html">contact</a>
-              </li>
-              <li >
-                <a href="/about.html">about</a>
-              </li>
-              <% if user_signed_in? %>
                 <li >
                   <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
                 </li>
-              <%end%>
             </ul>
           <%elsif current_user.present? && current_user.role =="admin" %>
             <ul id="menu">
