--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="sign_in_box">
-  <h2 class="red_color">Edit Your Profile</h2>
+  <h2 class="red_color">Edit User</h2>
   <%= form_for [:admin,@user] do |f|%>
     <% if @user.errors.any? %>
       <div id="error_explanation" class="red_color">
@@ -14,33 +14,38 @@
     <% end %>
 
     <div>
-      First Name : <br/>
+      First Name: * <br/>
       <%= f.text_field :fname , :class => "big_text_field"%>
     </div>
     <br/>
     <div>
-      Last Name : <br/>
+      Last Name: * <br/>
       <%= f.text_field :lname , :class => "big_text_field"%>
     </div>
     <br/>
     <div>
-      Company : <br/>
+      Company: <br/>
       <%= f.text_field :company , :class => "big_text_field"%>
     </div>
     <br/>
     <div>
-      Phone : <br/>
+      Phone: <br/>
       <%= f.text_field :phone , :class => "big_text_field"%>
+       <br/>
+            <i>Ex: 111-222-3456</i>
     </div>
     <br/>
     <div>
-      Email : <br/>
+      Email: * <br/>
       <%= f.email_field :email, :autofocus => true , :class => "big_text_field"%>
     </div>
     <br/>
     <div>
-      Password : <br/>
+      Password: <br/>
       <%= f.password_field :password , :class => "big_text_field"%>
+      <i>
+        (leave blank if you don't want to change it)
+      </i>
     </div>
 
     <%f.hidden_field :role, :value => "client"%><br/>
