--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,38 +1,38 @@
 <div class="sign_in_box">
 
-  <h3 class="red_color">User Profile Information</h3>
+  <h3 class="red_color">User Information</h3>
 
   <div>
-    First Name : <%= @user.fname if @user.fname%>
+    First Name: <%= @user.fname if @user.fname%>
   </div>
   <br/>
 
   <div>
-    Last Name : <%= @user.lname if @user.lname%>
+    Last Name: <%= @user.lname if @user.lname%>
   </div>
   <br/>
 
   <div>
-    Email : <%= @user.email if @user.email%>
+    Email: <%= @user.email if @user.email%>
   </div>
   <br/>
 
   <div>
-    Company : <%= @user.company if @user.company%>
+    Company: <%= @user.company if @user.company%>
   </div>
   <br/>
 
   <div>
-    Phone : <%= @user.phone if @user.phone%>
+    Phone: <%= @user.phone if @user.phone%>
   </div>
   <br/>
 
   <div>
     Status :
     <% if @user.is_active == true%>
-      active
+      Active
     <%elsif @user.is_active == false%>
-      inactive
+      Inactive
     <%end%>
   </div>
   <br/>
