--- a/app/views/user_mailer/edit_user_password.html.erb
+++ b/app/views/user_mailer/edit_user_password.html.erb
@@ -1,6 +1,6 @@
-Dear <%=@user.fname if @user.fname.present?%> <%=@user.lname if @user.lname.present?%>!
+Dear <%=@user.fname if @user.fname.present?%> <%=@user.lname if @user.lname.present?%>,
 <br/><br/>
-Your account has been Updated on "Hipaa Security Suite". <br/>
+Your account has been updated on "Hipaa Security Suite". <br/>
 You can login with your new password which is <%=@password%> <br/>
 <br/> <br/>
 Best Regards,<br/>
