--- a/app/views/user_mailer/new_user_email.html.erb
+++ b/app/views/user_mailer/new_user_email.html.erb
@@ -1,4 +1,4 @@
-Dear <%=@user.fname if @user.fname.present?%> <%=@user.lname if @user.lname.present?%>!
+Dear <%=@user.fname if @user.fname.present?%> <%=@user.lname if @user.lname.present?%>,
 <br/><br/>
 Your account has been created on "Hipaa Security Suite". <br/>
 You can login with your password which is <%=@password%> <br/>
